@startuml
skinparam linetype ortho

class Tabuleiro {
    - static Tabuleiro instance
    - Map<Posicao, Casa> casas
    - Map<Time, Integer> pecasPorTime
    - VitoriaDerrotaObserver vitoriaDerrotaObserver
    - static TabuleiroProxySecurity proxySecurityInstance
    - Tabuleiro()
    + static getInstance(): Tabuleiro
}

class Peca {
    - String nome
    - Time time
}

class Jogador {
    - String nome
}

class RegrasDoJogo {
    + validarMovimento()
}

Tabuleiro <.. Peca : usa
Tabuleiro <.. Jogador : usa
Tabuleiro <.. RegrasDoJogo : usa
@enduml